@@ -7,6 +7,7 @@ Changelog
 * New functions and classes:
   - recipes.chained_getter
 * New unit tests:
+  - tests.test_logs.TestResetHandlers
   - tests.test_logs.TestLogMaxFilter
   - tests.test_logs.TestMetaLoggableType
   - tests.test_recipes.TestChainedGetter
